hphp/test/slow/container-ref-init/array-init.php.expectf

Fatal error: Value of collection element cannot be marked as reference in %s/array-init.php on line 7
